Add total gross volume, total gross weight, total net weight mappers